# CppSectOpenGL

./: .gitignore  .gitmodules  LICENSE  README.md
01_EmptyWindow/: CMakeLists.txt  main.cpp
02_Triangle(Shaders)/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
03_Texture/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
03_Texture/Shaders/: basic.frag  basic.vert
04_Transformations/: CMakeLists.txt  main.cpp
05_Cube/: Camera.cpp  Camera.h  main.cpp
06_Lighting/: CMakeLists.txt  Camera.cpp  Camera.h  Shader.h  main.cpp
06_Lighting/SOIL2/: README.md
06_Lighting/Shaders/: lamp.frag  lighting.frag  lighting.vert
07_Skybox/: CMakeLists.txt  main.cpp
